# LibNDOF

./: .gitignore  CMakeLists.txt  README.md  TODO.md  configure.hpp.in
examples/: CMakeLists.txt  events.cpp
include/: libNDOF.hpp
include/libNDOF/: Devices.hpp  devices.hpp
source/: Connection.cpp  ConnexionMacOS.hpp  NDOF.cpp  helpers.hpp  libNDOF.cpp
source/LibNDOF/: Connexion.hpp  ConnexionMacOS.hpp  MacOSNDOF.hpp  MacOSNDOF.mm  WinNDOF.cpp
source/NDOF/: MacOS.mm  MacOSNDOF.hpp  MacOSNDOF.mm  Mouse3DHandlerMac.mm  WinNDOF.hpp
